# faaf

./: .env_example  .gitignore  README.md  pyproject.toml  wiki_eval_factual_recall.py
faaf/: claude_utils.py  config.py  experiments.py  faaf_verification.py  generate_facts.py  metrics.py  prompt_fact_verification.py  utils.py
